Change status colours

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             }
 
             .status-ok td {
-                background-color: rgba(0, 255, 0, 0.2);
+                background-color: #9BE53D;
             }
 
             .status-failure td {
-                background-color: red;
+                background-color: #E55934;
             }
         </style>
 
