--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                 background-color: #333
             }
 
+            a {
+                text-decoration: none;
+            }
+
             h1 {
                 text-align: center;
                 color: white;
@@ -30,6 +34,13 @@
                 padding: 10px;
                 margin: 10px;
                 font-size: 20px;
+            }
+
+            .card a {
+                padding: 10px;
+                margin: -10px;
+                display: block;
+                color: inherit;
             }
 
             .card .name {
@@ -64,10 +75,16 @@
         <h1>pingpong - Network Nodes Status</h1>
         {{ range $state := .States }}
             <div class="card {{if $state.IsOK}} status-ok {{ else }} status-failure {{ end }}">
-                <div class="name">{{$state.Name}}</div>
-                <div class="url">{{$state.URL}}</div>
-                <div class="method">{{$state.Method}}</div>
-                <div class="note">{{$state.Note}}</div>
+                {{ if eq $state.Method "HTTP/S" }}
+                    <a href="{{ $state.URL }}" target="_blank">
+                {{ end }}
+                    <div class="name">{{$state.Name}}</div>
+                    <div class="url">{{$state.URL}}</div>
+                    <div class="method">{{$state.Method}}</div>
+                    <div class="note">{{$state.Note}}</div>
+                {{ if eq $state.Method "HTTP/S" }}
+                    </a>
+                {{ end }}
             </div>
         {{ end }}
     </body>
