--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
             }
             
             body {
-                padding: 25px;
-                box-sizing: border-box;
+                display: inline-block;
                 background-color: #333
             }
 
@@ -60,6 +59,15 @@
             .status-failure {
                 background-color: #E55934;
             }
+
+            .footer {
+                position: fixed;
+                bottom: 0;
+                text-align: center;
+                width: 100%;
+                color: #999;
+                background-color: #333;
+            }
         </style>
 
         <script type="text/javascript">
@@ -87,5 +95,6 @@
                 {{ end }}
             </div>
         {{ end }}
+        <div class="footer">{{ .Version }}</div>
     </body>
 </html>
